refactor: Phase A - Remove IdentifiedObject and fix code quality issues
  Completes Phase A of ESPI 4.0 schema compliance refactoring with code quality improvements.

  Entity Refactoring:
  - PhoneNumberEntity: Remove extends IdentifiedObject, add UUID id field
  - LineItemEntity: Remove extends IdentifiedObject, add UUID id field
  - BatchListEntity: Remove extends IdentifiedObject, add UUID id field, remove description constructors
  - Update 4 test files to align with minimal entity design (Option A)

  Code Quality Improvements:
  - Use pattern matching for instanceof (Java 21 feature)
  - Replace Stream.collect(Collectors.toList()) with Stream.toList()
  - Use unnamed pattern (_) for unused exception variables
  - Chain multiple AssertJ assertions for better readability
  - Replace deprecated Faker methods with modern alternatives
  - Remove Thread.sleep() anti-pattern from timestamp test

  All tests pass (545 tests, 0 failures). These entities do not extend IdentifiedObject per ESPI 4.0 spec.

  🤖 Generated with [Claude Code](https://claude.com/claude-code)

  Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>